# ping

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
containers/: dev.docker-compose.yml
containers/element/: config.json
containers/synapse/: homeserver.yaml  localhost.signing.key
docs/mock-ups/: rough-draft.xcf
ping-common/: Cargo.toml
ping-gtk/: Cargo.toml  com.codecaptured.ping-gtk.json  meson.build
ping-gtk/data/: com.codecaptured.ping-gtk.appdata.xml.in  com.codecaptured.ping-gtk.desktop.in  com.codecaptured.ping-gtk.gschema.xml  meson.build
ping-gtk/po/: POTFILES  meson.build
ping-gtk/src/: config.rs  main.rs  meson.build  ping_gtk.gresource.xml  window.rs  window.ui
src/: main.rs  ui.rs
src/ui/: chat_view.rs  message.rs
