[package]
name = "ping"
version = "0.1.0"
authors = ["mirdaki <mirdaki@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.2"
matrix-sdk = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
