[package]
name = "ping"
version = "0.1.0"
authors = ["mirdaki <mirdaki@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
iced = { version = "0.2", features = ["image", "debug"] }
matrix-sdk = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
